<resources>
    <string name="app_name">TheMovie</string>
    <string name="toolbar_title">Discover</string>
    <string name="menu_search">Search</string>
    <string name="iv_banner_text">The Wolverine 2013\nOfficial Review</string>
    <string name="lbl_movie_name">Westworld</string>
    <string name="lbl_movie_rating">9.0</string>
    <string name="lbl_see_more"><u>SEE MORE</u></string>
    <string name="lbl_best_popular_films_and_serial">BEST POPULAR FILMS AND SERIAL</string>
    <string name="lbl_check_movie_nshowtimes">Check Movie \nShowtimes</string>
    <string name="lbl_showcases">SHOWCASES</string>
    <string name="lbl_more_showcases"><u>MORE SHOWCASES</u></string>
    <string name="lbl_show_case_movie_date">15 December 2016</string>
    <string name="lbl_show_case_movie_title">Passenger</string>
    <string name="lbl_more_actors"><u>MORE ACTORS</u></string>
    <string name="lbl_best_actors">BEST ACTORS</string>
    <string name="lbl_movie_story">Lured to a Japan he hasn\'t seen since World War II, century-old mutant Wolverine (Hugh Jackman) finds himself in a shadowy realm of yakuza and samurai. Wolverine is pushed to his physical and emotional brink when he is forced to go on the run with a powerful industrialist\'s daughter (Tao Okamoto) and is confronted -- for the first time -- with the prospect of death. As he struggles to rediscover the hero within himself, he must grapple with powerful foes and the ghosts of his own haunted past.</string>
    <string name="lbl_title_storyline">STORYLINE</string>
    <string name="lbl_title_about">ABOUT FLIM</string>
</resources>
