<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".activities.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/toolbar_title"
            app:titleCentered="true"
            app:titleTextColor="@color/white" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/margin_large">

            <FrameLayout
                android:id="@+id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPagerBanner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_banner" />

                <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                    android:id="@+id/dotIndicatorBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center"
                    app:dotsColor="@android:color/darker_gray"
                    app:dotsSize="8dp"
                    app:dotsSpacing="4dp"
                    app:selectedDotColor="@color/colorAccent"
                    android:elevation="4dp"
                    app:dotsWidthFactor="1" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvBestPopularLabel"
                android:layout_below="@id/flBanner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_best_popular_films_and_serial"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="bold"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_3" />

            <include
                android:id="@+id/vpBestPopularMovieList"
                layout="@layout/view_pod_movie_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBestPopularLabel"
                android:layout_marginTop="@dimen/margin_medium_2" />

            <RelativeLayout
                android:id="@+id/rlCheckMovieShowTime"
                android:layout_below="@id/vpBestPopularMovieList"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="@dimen/margin_medium_3"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:background="@color/colorPrimaryLight">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvCheckMovieShowtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_check_movie_nshowtimes"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_heading_1x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginTop="@dimen/margin_medium_3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvSeeMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lbl_see_more"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_regular_3x"
                    android:layout_marginStart="@dimen/margin_medium_3"
                    android:layout_marginBottom="@dimen/margin_medium_3"
                    android:layout_alignParentBottom="true" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivLocationIcon"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/margin_medium_3"
                    app:srcCompat="@drawable/ic_baseline_location_on_white_24dp" />
            </RelativeLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tlGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rlCheckMovieShowTime"
                app:tabGravity="center"
                app:tabMode="scrollable"
                android:background="@color/colorPrimary"
                android:layout_marginTop="@dimen/margin_large"
                app:tabSelectedTextColor="@color/white"
                app:tabTextColor="@color/colorSecondaryText"
                app:tabIndicatorColor="@color/colorAccent" />

            <FrameLayout
                android:id="@+id/flMovieByGenre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/margin_medium_2"
                android:paddingBottom="@dimen/margin_medium_2"
                android:layout_below="@id/tlGenre"
                android:background="@color/colorPrimaryDark">

                <include
                    android:id="@+id/vpMovieByGenre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/view_pod_movie_list" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseMovie"
                android:layout_below="@id/flMovieByGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_showcases"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                android:textColor="@color/colorSecondaryText"
                android:layout_marginStart="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvShowCaseMoreMovie"
                android:layout_below="@id/flMovieByGenre"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_more_showcases"
                android:textSize="@dimen/text_regular"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginEnd="@dimen/margin_medium_2"
                android:layout_marginTop="@dimen/margin_medium_2" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvShowCaseMovie"
                android:layout_below="@id/tvShowCaseMovie"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2"
                android:paddingEnd="@dimen/margin_medium_2"
                android:clipToPadding="false"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal" />

            <include
                android:id="@+id/vpBestActorList"
                android:layout_below="@id/rvShowCaseMovie"
                layout="@layout/view_pod_actor_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium_2" />
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>